--- a/Code/Poster.tex
+++ b/Code/Poster.tex
@@ -185,7 +185,7 @@ This research uses a dataset from the Jules Stein Eye Institute, comparing value
 \section{Limitations}
 \begin{itemize}
 \item \textbf{Small Sample Size:} There is a limit on the generalization of findings to the broader astronaut population.
-\item \textbf{Uncontrolled Confounding Variables:} Factors such as age were not explicitly adjusted for in the analysis, which may influence results
+\item \textbf{Uncontrolled Confounding Variables:} Factors such as age were not explicitly adjusted for in the analysis, which may influence results. 
 \item \textbf{Measurement Variability:} Potential inconsistencies in data collection methods.
 \end{itemize} 
 
